examples/valid/05_top_level_contextual_offer.lane
fn custom_add(a : Int, b : Int) -> Int {
  a
}

offer custom_add_ops : Add[Int] = Add::{ add: custom_add }

let chosen : Int = 1 + 2

fn use_offered_add() -> Int {
  chosen
}
